; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_82571.c_e1000_write_nvm_82571.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_82571.c_e1000_write_nvm_82571.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"e1000_write_nvm_82571\00", align 1
@E1000_ERR_NVM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.e1000_hw*, i32, i32, i32*)* @e1000_write_nvm_82571 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @e1000_write_nvm_82571(%struct.e1000_hw* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.e1000_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.e1000_hw* %0, %struct.e1000_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = call i32 @DEBUGFUNC(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.e1000_hw*, %struct.e1000_hw** %5, align 8
  %12 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  switch i32 %14, label %27 [
    i32 130, label %15
    i32 129, label %15
    i32 128, label %15
    i32 132, label %21
    i32 131, label %21
  ]

15:                                               ; preds = %4, %4, %4
  %16 = load %struct.e1000_hw*, %struct.e1000_hw** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @e1000_write_nvm_eewr_82571(%struct.e1000_hw* %16, i32 %17, i32 %18, i32* %19)
  store i32 %20, i32* %9, align 4
  br label %30

21:                                               ; preds = %4, %4
  %22 = load %struct.e1000_hw*, %struct.e1000_hw** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @e1000_write_nvm_spi(%struct.e1000_hw* %22, i32 %23, i32 %24, i32* %25)
  store i32 %26, i32* %9, align 4
  br label %30

27:                                               ; preds = %4
  %28 = load i32, i32* @E1000_ERR_NVM, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %9, align 4
  br label %30

30:                                               ; preds = %27, %21, %15
  %31 = load i32, i32* %9, align 4
  ret i32 %31
}

declare dso_local i32 @DEBUGFUNC(i8*) #1

declare dso_local i32 @e1000_write_nvm_eewr_82571(%struct.e1000_hw*, i32, i32, i32*) #1

declare dso_local i32 @e1000_write_nvm_spi(%struct.e1000_hw*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
